--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php-di/php-di": "^6.0",
         "league/plates": "^3.4",
         "simplemvc/framework": "^0.3",
-        "monolog/monolog": "^2.8"
+        "monolog/monolog": "^2.8",
+        "tracy/tracy": "^2.10"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.7",
