--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         "league/plates": "^3.4",
         "simplemvc/framework": "^0.3",
         "monolog/monolog": "^2.8",
-        "tracy/tracy": "^2.10"
+        "tamtamchik/simple-flash": "^3.0",
+        "filp/whoops": "^2.16",
+        "kint-php/kint": "^6.0",
+        "salesforce/handlebars-php": "^3.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.7",
