--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "monolog/monolog": "^2.8",
         "tamtamchik/simple-flash": "^3.0",
         "filp/whoops": "^2.16",
-        "kint-php/kint": "^6.0",
-        "salesforce/handlebars-php": "^3.0"
+        "symfony/var-dumper": "^6.4",
+        "zordius/lightncandy": "^1.2"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.7",
