--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
         "tamtamchik/simple-flash": "^3.0",
         "filp/whoops": "^2.16",
         "symfony/var-dumper": "^6.4",
-        "zordius/lightncandy": "^1.2"
+        "zordius/lightncandy": "^1.2",
+        "league/commonmark": "^2.6",
+        "ausi/slug-generator": "^1.1",
+        "dotzero/ypaginator": "^0.7.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.7",
