--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "zordius/lightncandy": "^1.2",
         "league/commonmark": "^2.6",
         "ausi/slug-generator": "^1.1",
-        "dotzero/ypaginator": "^0.7.0"
+        "dotzero/ypaginator": "^0.7.0",
+        "gabordemooij/redbean": "^5.7"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.7",
